# kwave

./: .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  AUTHORS  CHANGES  CMakeLists.txt  ExtraDesktop.sh  Hall-Of-Shame.txt  History  Kwave.filelist  Kwave.kdevelop  Kwave.kdevelop.filelist  LICENSES  Makefile  Makefile.am  Makefile.dist  Messages.sh  README  README.OLD  README.md  TODO  VERSION  about.cpp  acconfig.h  acinclude.m4  aclocal.m4  automoc  classes.h  config.guess  config.h  config.h.bot  config.h.cmake  config.h.in  config.sub  configure  configure.in  dialogs.cpp  (+27 more)
doc/: CMakeLists.txt  Makefile.am  devel.docbook  fix-common  help_cs.po  help_de.docbook  help_de.po  help_en.docbook  help_es.po  help_fr.po  help_it.po  index.docbook
doc/de/: building_rpm_from_cvs.html  building_rpm_from_targz.html  command_line.html  compiler_optimizations.html  credits.html  developers.html  drag_and_drop.html  faq.html  index.docbook  index.html  installation.html  introduction.html  kwave-revhistory.html  manual_compilation.html  open_and_save.html  relocating_rpm.html  requirements.html  rpm_optimizations.html  selecting.html  using-kapp.html
doc/en/: CMakeLists.txt  README.translators.txt  building_rpm_from_cvs.html  building_rpm_from_targz.html  command_line.html  compiler_optimizations.html  credits.html  developers.html  drag_and_drop.html  faq.html  index.docbook  index.html  installation.html  introduction.html  kwave-revhistory.html  manual_compilation.html  open_and_save.html  relocating_rpm.html  requirements.html  rpm_optimizations.html  selecting.html  using-kapp.html
doc/pt/: index.docbook
doc/sv/: index.docbook
doc/uk/: index.docbook
kwave/: App.cpp  App.h  ApplicationContext.cpp  CMakeLists.txt  ClipBoard.cpp  ClipBoard.h  CodecManager.cpp  CodecManager.h  FFTContainer.cpp  FFTContainer.h  FFTWindow.cpp  FFTWindow.h  FileContext.cpp  FileContext.h  ImageView.cpp  ImageView.h  KwaveApp.cpp  KwaveApp.h  KwaveSplash.cpp  KwaveSplash.h  LabelManager.cpp  LabelManager.h  MainWidget.cpp  MainWidget.h  Makefile.am  MemoryManager.cpp  MemoryManager.h  MouseMark.cpp  MouseMark.h  PitchContainer.cpp  PitchContainer.h  PitchWidget.cpp  PitchWidget.h  PitchWindow.cpp  PitchWindow.h  PlaybackContext.cpp  PlaybackContext.h  PlaybackController.cpp  PlaybackController.h  PlayerToolBar.cpp  (+118 more)
kwave/doc/: index.html  interpolation.html  plugin-conversion.txt  what.html
kwave/images/: font.xpm  knob.xpm  kwave.xpm  light_off.xpm  light_on.xpm  logo.xpm  lspeaker.xpm  minifont.xpm  rspeaker.xpm  selectedknob.xpm  xspeaker.xpm
kwave/pics/: delete.xpm  exit.xpm  knife.xpm  knob.xpm  krec_record.xpm  kwave-splash.xcf  kwave.svgz  kwave.xpm  light_off.xpm  light_on.xpm  logo.xpm  lspeaker.xpm  minifont.xpm  playback_loop.xpm  playback_pause.xpm  playback_pause2.xpm  playback_start.xpm  playback_stop.xpm  rspeaker.xpm  sc-apps-kwave.svgz  selectedknob.xpm  (+1 more)
libaudiofile/: CMakeLists.txt  Makefile.am  Makefile.in  aiff.c  aiff.h  aiffwrite.c  common.h  extended.c  extended.h  intfloat_readwrite.c  ircamwrite.c  loop.c  modules.c  openclose.c  wave.c
libgui/: AsyncSync.cpp  AsyncSync.h  AsyncSyncGuard.h  CMakeLists.txt  Colors.cpp  Colors.h  ConfirmCancelProxy.cpp  ConfirmCancelProxy.h  CornerPatchWidget.cpp  CornerPatchWidget.h  CurveWidget.cpp  CurveWidget.h  Dialog.cpp  Dialog.h  FFTWidget.cpp  FFTWidget.h  FaderWidget.cpp  FaderWidget.h  FileDialog.cpp  FileDialog.h  FileProgress.cpp  FileProgress.h  FilterPlugin.cpp  FilterPlugin.h  FloatLine.cpp  FloatLine.h  FloatLine.h.kdoc  FormantWidget.cpp  FormantWidget.h  FrequencyResponseWidget.cpp  FrequencyResponseWidget.h  HMSTimeWidget.cpp  HMSTimeWidget.h  HMSTimeWidgetBase.ui  ImageView.cpp  ImageView.h  IntValidatorProxy.cpp  IntValidatorProxy.h  InvertableSpinBox.cpp  InvertableSpinBox.h  (+96 more)
libkwave/: ApplicationContext.cpp  ApplicationContext.h  ArtsKwaveMultiTrackFilter.h  ArtsMultiIO.h  ArtsMultiPlaybackSink.cpp  ArtsMultiPlaybackSink.h  ArtsMultiSink.h  ArtsMultiSource.h  ArtsMultiTrackFilter.h  ArtsMultiTrackSink.h  ArtsMultiTrackSource.h  ArtsNativeMultiTrackFilter.h  ArtsPlaybackSink.idl  ArtsPlaybackSink_impl.cpp  ArtsPlaybackSink_impl.h  ArtsSampleSink.idl  ArtsSampleSink_impl.cpp  ArtsSampleSink_impl.h  ArtsSampleSource.idl  ArtsSampleSource_impl.cpp  ArtsSampleSource_impl.h  BitrateMode.h  ByteOrder.h  CMakeLists.txt  ClipBoard.cpp  ClipBoard.h  CodecBase.cpp  CodecBase.h  CodecManager.cpp  CodecManager.h  CodecPlugin.cpp  CodecPlugin.h  CommandHandler.h  Compression.cpp  Compression.h  CompressionType.cpp  CompressionType.h  ConfirmCancelProxy.cpp  ConfirmCancelProxy.h  Connect.cpp  (+230 more)
libmad/: CREDITS  Makefile.am  acconfig.h  config.h.in  configure.in  fixed.h  frame.c  layer3.c
mt/: AsyncSync.cpp  AsyncSync.h  Asynchronous_Object.h  CMakeLists.txt  Makefile.am  Mutex.cpp  Mutex.h  MutexGuard.cpp  MutexGuard.h  MutexSet.cpp  MutexSet.h  Semaphore.cpp  Semaphore.h  SharedLock.cpp  SharedLock.h  SharedLockGuard.cpp  SharedLockGuard.h  SignalProxy.h  TSS_Object.cpp  TSS_Object.h  Thread.cpp  Thread.h  ThreadCondition.cpp  ThreadCondition.h  ThreadsafeX11Guard.cpp  ThreadsafeX11Guard.h
plugins/: CMakeLists.txt  Makefile.am  kwave-plugin.desktop
po/: CMakeLists.txt  Makefile.am  ca.po  ca@valencia.po  cs.po  de.gmo  de.po  en_GB.po  es.po  fi.po  fr.po  gl.po  it.po  kwave.pot  nl.po  pl.po  pt.po  pt_BR.po  sv.po  uk.po
src/: ClipBoard.cpp  ClipBoard.h  FFTContainer.cpp  FFTContainer.h  FFTWindow.cpp  FFTWindow.h  ImageView.cpp  ImageView.h  KwaveApp.cpp  KwaveApp.h  MainWidget.cpp  MainWidget.h  Makefile.am  MouseMark.cpp  MouseMark.h  PitchContainer.cpp  PitchContainer.h  PitchWidget.cpp  PitchWidget.h  PitchWindow.cpp  PitchWindow.h  PlaybackController.cpp  PlaybackController.h  PluginManager.cpp  PluginManager.h  ProgressDialog.cpp  ProgressDialog.h  SignalManager.cpp  SignalManager.h  SignalWidget.cpp  SignalWidget.h  SonagramContainer.cpp  SonagramContainer.h  SonagramWindow.cpp  SonagramWindow.h  TopWidget.cpp  TopWidget.h  about.cpp  about.h  addsynth.cpp  (+57 more)
(+898 files in other folders)
